--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1454,7 +1454,7 @@ body {
 
 .lcd-pixel {
   width: 100%;
-  height: 4px;
+  height: 5px; /* 3 rows × 5px + 2 gaps × 1px = 17px, matches lcd-ref-dot height */
   border-radius: 1px;
   background: #2a2928;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.3);
