--- a/client/src/index.css
+++ b/client/src/index.css
@@ -743,11 +743,22 @@ body {
 }
 
 .panel-icon {
-  width: 13px;
-  height: 13px;
+  width: 14px;
+  height: 14px;
   flex-shrink: 0;
-  fill: #9b9693;
+  background-color: var(--text-dim);
+  -webkit-mask-size: contain;
+  mask-size: contain;
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
 }
+
+.panel-icon.icon-drop { -webkit-mask-image: url('/drop.svg'); mask-image: url('/drop.svg'); }
+.panel-icon.icon-alloy { -webkit-mask-image: url('/alloy.svg'); mask-image: url('/alloy.svg'); }
+.panel-icon.icon-output { -webkit-mask-image: url('/output.svg'); mask-image: url('/output.svg'); }
+.panel-icon.icon-items { -webkit-mask-image: url('/items.svg'); mask-image: url('/items.svg'); }
 
 .header-subtitle {
   font-weight: 300;
