feat: use Items2 icon for items, Refinement2 icon for Refine panel

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -777,8 +777,9 @@ body {
 .panel-icon.icon-drop, .btn-icon.icon-drop { -webkit-mask-image: url('/drop.svg'); mask-image: url('/drop.svg'); }
 .panel-icon.icon-alloy, .btn-icon.icon-alloy { -webkit-mask-image: url('/alloy.svg'); mask-image: url('/alloy.svg'); }
 .panel-icon.icon-output, .btn-icon.icon-output { -webkit-mask-image: url('/output.svg'); mask-image: url('/output.svg'); }
-.panel-icon.icon-items, .btn-icon.icon-items { -webkit-mask-image: url('/items.svg'); mask-image: url('/items.svg'); }
+.panel-icon.icon-items, .btn-icon.icon-items { -webkit-mask-image: url('/items2.svg'); mask-image: url('/items2.svg'); }
 .panel-icon.icon-works, .btn-icon.icon-works { -webkit-mask-image: url('/works.svg'); mask-image: url('/works.svg'); }
+.panel-icon.icon-refinement, .btn-icon.icon-refinement { -webkit-mask-image: url('/refinement2.svg'); mask-image: url('/refinement2.svg'); }
 
 .btn-icon {
   width: 14px;
