--- a/client/src/index.css
+++ b/client/src/index.css
@@ -342,20 +342,10 @@ body {
   flex-shrink: 0;
 }
 
-/* Fire grids at edges of floating LCD - expand to fill and align */
+/* Fire grids at edges of floating LCD - fixed size, no expansion */
 .lcd-fire-left,
 .lcd-fire-right {
-  flex: 1;
-  min-width: 0;
-  display: flex;
-}
-
-.lcd-fire-left {
-  justify-content: flex-start;
-}
-
-.lcd-fire-right {
-  justify-content: flex-end;
+  flex-shrink: 0;
 }
 
 .lcd-floating {
